--- a/flex-media.html
+++ b/flex-media.html
@@ -3,9 +3,18 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <title>Flexbox and Media Queries</title>
     </head>
     <body>
-        
+        <main></main>
+        <h1>Flexbox and Media Queries</h1>
+        <hr/><br/>
+        <div class="flex-container">
+            <div class="flex-item">ITEM1</div>
+            <div class="flex-item">ITEM2</div>
+            <div class="flex-item">ITEM3</div>
+        </div>
     </body>
 </html>
